fixed spacing between jumbotron and content

--- a/css/index.css
+++ b/css/index.css
@@ -339,6 +339,9 @@ h4 {
   color: #FFFFFF;
   font-size: 1.8rem;
 }
+.jumbo-space-home {
+  margin-bottom: -110px;
+}
 .desktop {
   width: 100%;
   height: auto;
@@ -415,6 +418,19 @@ h4 {
         
     }
 }*/
+.jumbo-space-home {
+  margin-bottom: -160px;
+}
+@media (max-width: 768px) {
+  .jumbo-space-home {
+    margin-bottom: -140px;
+  }
+}
+@media (max-width: 768px) {
+  .jumbo-space-home {
+    margin-bottom: -110px;
+  }
+}
 .jumbo-text-home {
   font-weight: bold;
   font-size: 6.4rem;
@@ -482,6 +498,11 @@ h4 {
   width: 320px;
   padding: 15px 0;
 }
+@media (max-width: 400px) {
+  .main-content .top-content .architects .text-content {
+    width: 100%;
+  }
+}
 .main-content .top-content .architects .text-content button {
   border: #222222 1px solid;
   background: white;
@@ -490,6 +511,11 @@ h4 {
 }
 .main-content .top-content .architects .text-content button:hover {
   background: #D8D8D8;
+}
+@media (max-width: 400px) {
+  .main-content .top-content .architects .text-content button {
+    width: 100%;
+  }
 }
 .main-content .top-content .architects .desktop {
   width: 320px;
@@ -527,6 +553,11 @@ h4 {
   width: 45%;
   padding: 10px;
 }
+@media (max-width: 400px) {
+  .main-content .designs .text-content {
+    width: 100%;
+  }
+}
 .main-content .designs .text-content button {
   border: #222222 1px solid;
   background: white;
@@ -535,6 +566,11 @@ h4 {
 }
 .main-content .designs .text-content button:hover {
   background: #D8D8D8;
+}
+@media (max-width: 400px) {
+  .main-content .designs .text-content button {
+    width: 100%;
+  }
 }
 .main-content .designs .desktop {
   width: 45%;
@@ -649,6 +685,19 @@ h4 {
 .main-content .projects img {
   width: 100%;
   height: auto;
+}
+.jumbo-space-services {
+  margin-bottom: -60px;
+}
+@media (max-width: 768px) {
+  .jumbo-space-services {
+    margin-bottom: -40px;
+  }
+}
+@media (max-width: 768px) {
+  .jumbo-space-services {
+    margin-bottom: -10px;
+  }
 }
 .jumbo-text-services {
   font-weight: bold;
@@ -807,6 +856,19 @@ h4 {
 }
 .tabs .tabs-links .tabs-link-selected:hover {
   background-color: #FFFFFF;
+}
+.jumbo-space-contact {
+  margin-bottom: -60px;
+}
+@media (max-width: 768px) {
+  .jumbo-space-contact {
+    margin-bottom: -50px;
+  }
+}
+@media (max-width: 768px) {
+  .jumbo-space-contact {
+    margin-bottom: -10px;
+  }
 }
 .jumbo-text-contact {
   font-weight: bold;
