--- a/less/contact.less
+++ b/less/contact.less
@@ -1,3 +1,14 @@
+.jumbo-space-contact {
+      margin-bottom: -60px;
+
+        @media (max-width: 768px) {
+            margin-bottom: -50px;
+        }
+         @media (max-width: 768px) {
+            margin-bottom: -10px;
+        }
+        }
+
 .jumbo-text-contact {
     .jumbo(-80px);
     h1 {
