--- a/less/header.less
+++ b/less/header.less
@@ -46,7 +46,9 @@
 }
 
 
-
+.jumbo-space-home {
+      margin-bottom: -110px;
+}
 
 .desktop {
             width: 100%;
