--- a/less/home.less
+++ b/less/home.less
@@ -8,6 +8,17 @@
         
     }
 }*/
+.jumbo-space-home {
+      margin-bottom: -160px;
+
+        @media (max-width: 768px) {
+            margin-bottom: -140px;
+        }
+         @media (max-width: 768px) {
+            margin-bottom: -110px;
+        }
+        }
+
 .jumbo-text-home {
     .jumbo(-260px);
     h1 {
@@ -27,6 +38,7 @@
             }
         }
 }    
+
 
 .main-content{
     box-sizing: border-box;
@@ -49,6 +61,9 @@
         .text-content{
             width: 320px;
             padding: 15px 0;
+            @media (max-width: 400px) {
+                width: 100%;
+                }
             button {
                 border: @black 1px solid;
                 background: white;
@@ -56,6 +71,10 @@
                 width: 100px;
                 &:hover {
                     background: @gray-box;
+                }
+                @media (max-width: 400px) {
+                    width: 100%;
+                    
                 }
             }
             
@@ -93,6 +112,9 @@
         .text-content{
             width: 45%;
             padding: 10px;
+            @media (max-width: 400px) {
+                width: 100%;
+                }
             button {
                 border: @black 1px solid;
                 background: white;
@@ -100,6 +122,10 @@
                 width: 100px;
                 &:hover {
                     background: @gray-box;
+                }
+                @media (max-width: 400px) {
+                    width: 100%;
+                    
                 }
             }
         }
