--- a/less/services.less
+++ b/less/services.less
@@ -1,3 +1,14 @@
+.jumbo-space-services {
+      margin-bottom: -60px;
+
+        @media (max-width: 768px) {
+            margin-bottom: -40px;
+        }
+         @media (max-width: 768px) {
+            margin-bottom: -10px;
+        }
+        }
+
 .jumbo-text-services {
     .jumbo(-80px);
     h1 {
